Correction remarque Marianne Modification de style et reprise mise en page

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -8,15 +8,15 @@
     <string name="next">Suivant</string>
     <string name="previous">Précédent</string>
     <string name="config_round">Configuration concours</string>
-    <string name="activity_maintenance">maintenance</string>
+    <string name="activity_maintenance">Maintenance</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="let_sgo">Allons y</string>
+    <string name="let_sgo">Allons-y</string>
     <string name="roundName">Nom concours</string>
     <string name="round">Volée</string>
-    <string name="Activity_resultat_round">resultat Concours</string>
+    <string name="Activity_resultat_round">Résultat Concours</string>
     <string name="configFill">Vous devez remplir tous les champs</string>
-    <string name="impact">impact</string>
+    <string name="impact">Impact</string>
     <string name="repartitionPoint">Repartition flèches</string>
     <string name="air_TitleGraphe_arrow_by_arrow">Nombre de flèches par valeur</string>
     <string name="air_Tittle_Axe_Y">Nombre de flèches</string>
@@ -24,22 +24,24 @@
     <string name="air_select_rounds">Resultat archer</string>
     <string name="air_TitleGraphe_rounsd">Score par concour</string>
     <string name="air_Tittle_Axe_X_round">Nom concours</string>
-    <string name="air_Tittle_Axe_Y_Score">score</string>
+    <string name="air_Tittle_Axe_Y_Score">Score</string>
     <string name="EndRound">Fin de concours</string>
     <string name="All">Tous</string>
     <string name="End">Volée</string>
-    <string name="missing_archer">archer manquant</string>
-    <string name="noElement">pas d\'élément</string>
+    <string name="missing_archer">Archer manquant</string>
+    <string name="noElement">Pas d\'élément</string>
     <string name="addArcher">Ajout archer</string>
     <string name="ArcherToRound">Archers en concours</string>
-    <string name="Noelement">Pas d enregistrement</string>
-    <string name="am_bexport_archer_round">export archer Concours</string>
+    <string name="Noelement">Pas d\' enregistrement</string>
+    <string name="am_bexport_archer_round">Export archer Concours</string>
     <string name="ClearDataBase">Purge Base donnée</string>
     <string name="baseClean">Supression Base</string>
-    <string name="baseAlertClean">voulez-vous vraiment tout effacer</string>
-    <string name="yes">oui</string>
-    <string name="no">non</string>
-    <string name="archer_base">archers en base</string>
-    <string name="acr_arrowByEnd">fleches par volée</string>
+    <string name="baseAlertClean">Voulez-vous vraiment tout effacer</string>
+    <string name="yes">Oui</string>
+    <string name="no">Non</string>
+    <string name="archer_base">Archers en base</string>
+    <string name="acr_arrowByEnd">Flèches par volée</string>
     <string name="acr_EndByRound">Volée par concours</string>
+    <string name="am_bAnnul">Annuler</string>
+    <string name="am_bManque">Manqué</string>
 </resources>
