dernier commit pour version 1.0.0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="am_bAnnul">Annul</string>
     <string name="am_bexport_round_archers">Export round archers</string>
     <string name="am_bexport_round_archer">Export round archer</string>
+    <string name="name_archer">archer\'s name</string>
 </resources>
