--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -46,4 +46,5 @@
     <string name="am_bManque">Manqué</string>
     <string name="am_bexport_round_archers">Export concours par archers</string>
     <string name="am_bexport_round_archer">"Export  concours  archer  "</string>
+    <string name="name_archer">Nom archer</string>
 </resources>
