dernier commit pour version 1.1.0 Mise en place de la table Round pour les futurs evolution Correction de Bug en cas d'abandon de la configuration Concours Mise en ligne de la documentation 'En francais'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="am_bexport_round_archers">Export round archers</string>
     <string name="am_bexport_round_archer">Export round archer</string>
     <string name="name_archer">archer\'s name</string>
+    <string name="Apropos">A propos</string>
 </resources>
