--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -47,4 +47,5 @@
     <string name="am_bexport_round_archers">Export concours par archers</string>
     <string name="am_bexport_round_archer">"Export  concours  archer  "</string>
     <string name="name_archer">Nom archer</string>
+    <string name="Apropos">A propos</string>
 </resources>
