--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="am_bexport_round_archer">Export round archer</string>
     <string name="name_archer">archer\'s name</string>
     <string name="Apropos">A propos</string>
+    <string name="Concours">Round</string>
 </resources>
