--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="archer">archer</string>
     <string name="arrow">Arrow</string>
     <string name="circle_of_success">circle of success</string>
+    <string name="Exit">exit</string>
 </resources>
