--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -23,7 +23,7 @@
     <string name="air_Tittle_Axe_Y">Nombre de flèches</string>
     <string name="air_Tittle_Axe_X">Valeur de flèche</string>
     <string name="air_select_rounds">Resultat archer</string>
-    <string name="air_TitleGraphe_rounsd">Score par concour</string>
+    <string name="air_TitleGraphe_rounsd">Score par concours</string>
     <string name="air_Tittle_Axe_X_round">Nom concours</string>
     <string name="air_Tittle_Axe_Y_Score">Score</string>
     <string name="EndRound">concours fini</string>
@@ -53,4 +53,5 @@
     <string name="archer">archer</string>
     <string name="arrow">flèche</string>
     <string name="circle_of_success">cercle de réussite</string>
+    <string name="Exit">Sortie</string>
 </resources>
