last version on market

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -54,4 +54,5 @@
     <string name="arrow">flèche</string>
     <string name="circle_of_success">cercle de réussite</string>
     <string name="Exit">Sortie</string>
+    <string name="me">Moi</string>
 </resources>
