--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="arrow">Arrow</string>
     <string name="circle_of_success">circle of success</string>
     <string name="Exit">exit</string>
+    <string name="me">Me</string>
 </resources>
