remise en forme ecran. introduction note archers. nouvelle table note_archer

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -55,4 +55,7 @@
     <string name="circle_of_success">cercle de réussite</string>
     <string name="Exit">Sortie</string>
     <string name="me">Moi</string>
+    <string name="note">note</string>
+    <string name="archers">archers</string>
+    <string name="archersNotes">Notes de l\'archer</string>
 </resources>
