--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="note">note</string>
     <string name="archers">archers</string>
     <string name="archersNotes">Notes of archers</string>
+    <string name="RoundQualifier">tag</string>
+    <string name="resRoundFilter">filter</string>
 </resources>
