Ajout reglage Offset pointage valeur fleche

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -60,4 +60,6 @@
     <string name="archersNotes">Notes de l\'archer</string>
     <string name="RoundQualifier">tag</string>
     <string name="resRoundFilter">filtre</string>
+    <string name="pointageOffset">ValeurOffset</string>
+    <string name="pointageOffsetDesc">"valeur de decallage de pointage"</string>
 </resources>
