--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -49,7 +49,7 @@
     <string name="am_bexport_round_archers">Export concours par archers</string>
     <string name="am_bexport_round_archer">"Export  concours  archer  "</string>
     <string name="name_archer">Nom archer</string>
-    <string name="Apropos">Documentaton</string>
+    <string name="Apropos">Documentation</string>
     <string name="Concours">Concours</string>
     <string name="archer">archer</string>
     <string name="arrow">flèche</string>
@@ -61,7 +61,7 @@
     <string name="archersNotes">Notes de l\'archer</string>
     <string name="RoundQualifier">tag</string>
     <string name="resRoundFilter">filtre</string>
-    <string name="pointageOffset">ValeurOffset</string>
+    <string name="pointageOffset">Valeur Offset</string>
     <string name="pointageOffsetDesc">"valeur de decallage de pointage"</string>
 
 </resources>
