--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="useButton">Use button</string>
     <string name="roundName">round Name</string>
     <string name="round">round</string>
-    <string name="Activity_resultat_round">resultat Round</string>
+    <string name="Activity_resultat_round">results Round</string>
     <string name="configFill">You must fill all Item !</string>
     <string name="impact">impact</string>
     <string name="repartitionPoint">distribution arrow</string>
