Suppress deprecated api confirm suppress archer and round Adjust X in result round archer Add count 10+
Version Production

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -65,6 +65,7 @@
     <string name="pointageOffsetDesc">"valeur de decallage de pointage"</string>
     <string name="archerClean">"suppression archer "</string>
     <string name="roundClean">"suppression concours "</string>
+    <string name="Plus10">+</string>
 
 
 </resources>
