--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,6 @@
     <string name="pointageOffsetDesc">"pointing offset value "</string>
     <string name="archerClean">"delete archer "</string>
     <string name="roundClean">"round suppress "</string>
+    <string name="Plus10">+</string>
 
 </resources>
