template sur filtre modification et correction de config round + spinner arrow

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -82,6 +82,7 @@
     <string name="ar_filter_or">ou</string>
     <string name="ar_filter_round">Filtrer concour par:</string>
     <string name="ar_text_select_round">Selectionner concours:</string>
+    <string name="pasRun">pas de resultat avec ce filtre</string>
 
 
 </resources>
